BuildHughes/translation-tool/inputs/source_meta/objects/Packages_Within_Program__c.object
<CustomObject>
    <description>Creates a MtM between Customer Campaign and Packages.  1 Customer Campaign can be associated to more than 1 package and 1 package can be associated to more than one Customer Campaign.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Program__r.Brand_LE_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Name__c</fullName>
        <formula>Program__r.DSS_Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipName>Packages_Within_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <formula>Program__r.DSS_Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <formula>Program__r.Program_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Packages_Within_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Packages Within Catalog Pricebook</label>
    <nameField>
        <displayFormat>PIP-{000000}</displayFormat>
        <label>Package Customer Campaign ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages Within Catalog Pricebook</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>